fix: scrollbar for search hit list

--- a/scss/externs/_awesomplete.base.scss
+++ b/scss/externs/_awesomplete.base.scss
@@ -30,6 +30,8 @@
   position: absolute;
   top: 40px;
   z-index: 1;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
 .awesomplete.black > ul {
